[package]
name = "sand_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nannou = "0.18.1"
rand = "0.8.5"
uuid = {version = "1.4.1", features = ["v4"]}


[build-dependencies]
static_vcruntime = "2.0"